# stockTrade

./: .env.example  .gitignore  README.md  pyproject.toml
config/: assets.yaml  budget.yaml  calendars.yaml  strategy.yaml
deploy/: crontab.example  deploy_ubuntu.sh  update_ubuntu.sh
docs/: bugfix-retriever-2026-06-13.md
knowledge/: personal_strategy.md
src/fund_signal/: __init__.py  advisor.py  allocator.py  calendar.py  cli.py  config.py  fund_rules.py  knowledge.py  market_data.py  notifier_feishu.py  retriever.py  runner.py  storage.py  strategy.py  types.py
src/fund_signal/providers/: akshare_provider.py  alphavantage_provider.py  base.py  csv_provider.py  stooq_provider.py  yfinance_provider.py
strategy_records/: project_plan_20260530.md  strategy_20260530_182434.md  strategy_20260530_223219.md  strategy_20260530_224608.md  strategy_20260530_225008.md  strategy_20260614_current_monthly_plan.md
tests/: test_advisor.py  test_akshare_us_provider.py  test_allocator.py  test_calendar.py  test_fund_rules.py  test_knowledge.py  test_notifier.py  test_retriever.py  test_runner_dry_run.py  test_stooq_provider.py  test_storage.py
